BUG: 87857

always clear selection in finalizeMove, especially important when there
will be no item for selection afterwards as this avoids O(n^2) in
prepareMove()
Patch from Ismail Onur Filiz

svn path=/branches/KDE/3.5/kdepim/; revision=620346